Move text files to txt subfolder

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
-ircbot
 *.o
-ircbot.exe
-ircbot_test.exe
+ircbot*
+ircbot_test*
 lastseen.txt
 lastmessage.txt
-txt/totell.txt
-txt/rssfeeds.txt
-txt/admins.txt
-txt/log.txt
-Heartbleed.exe
-Heartbleed
+totell.txt
+rssfeeds.txt
+admins.txt
+log.txt
+cursers.txt
+numlines.txt
 *.a
